# SEP_ALML_GroupD

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  copulabook.ipynb  genindex.html  index.html  modules.html  notebooks.html  objects.inv  py-modindex.html  pyproject.toml  runtime_analy.ipynb  runtime_analy_clean.ipynb  runtime_analy_fixed.ipynb  search.html  searchindex.js  shapiq_student.html  subset_finding_example.ipynb  testbook.ipynb  testbook_WKNN.ipynb  testbook_WKNNtest.ipynb  threshbook.ipynb  wknn_example.ipynb
.github/workflows/: code-coverage.yml  code-quality.yml  documentation.yml  install-import.yml  unit-tests.yml
_modules/: index.html
_modules/shapiq_student/: gaussian_copula_imputer.html  gaussian_imputer.html  knn_explainer.html  knn_shapley.html  subset_finding.html  threshold.html  weighted.html
_sources/: index.rst.txt  modules.rst.txt  shapiq_student.rst.txt
_sources/examples/: runtime_analy_clean.ipynb.txt  subset_finding_example.ipynb.txt  unweighted_knn_gc_imputer.ipynb.txt
docs/: conf.py  index.rst  modules.rst  notebooks.rst  shapiq_student.rst  tests.rst  tests_grading.rst
examples/: data.csv  imputer_example.html  imputer_example.ipynb  knn_explaiener_example.ipynb  knn_explainer_example.html  knn_explainer_example.ipynb  movie_dataset.csv  runtime_analy_clean.html  subset_finding_example.html  textbook.ipynb  unweightedKNN_and_gc_imputer_clean.ipynb  unweighted_knn_gc_imputer.html  unweighted_knn_gc_imputer.ipynb
shapiq_student/: __init__.py  coalition_finding.py  gaussian_conditional_imputer.py  gaussian_copula_imputer.py  gaussian_imputer.py  gaussion_copula_imputer.py  imputer.py  knn_explainer.py  knn_explainer2.py  knn_explainer3.py  knn_shapley.py  knn_shapley2.py  knn_shapley_wang.py  movie_dataset.csv  movie_knn_demo.py  subset_finding.py  threshold.py  weighted.py  wknn_explainer.py  wknn_explainer2.py
src/src/examples/: testbook.ipynb
tests/: __init__.py  gaussian_copula_imputer_test.py  gaussion_copula_imputer_test.py  test_gaussian_conditional_imputer.py  test_gaussian_imputer.py  test_knn_explainer.py  test_knn_shapley.py  test_shapley.py  test_subset_finding.py  test_wknnshapley.py  threshold_test.py  treshold_test.py
tests_grading/: __init__.py  conftest.py  test_dependency.py  test_explainer.py  test_imputer.py  test_subset_finding.py  utils.py
tests_grading/data/: iv_a_large.pkl  iv_a_medium.pkl  iv_b_large.pkl  iv_b_medium.pkl  iv_c_large.pkl  iv_c_medium.pkl
